--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,13 @@ publish = "build_production"
 [build.environment]
 
 PHP_VERSION = "7.2"
+
+[[redirects]]
+  from = "/blog"
+  to = "https://chasingcode.dev/blog"
+  status = 301
+
+[[redirects]]
+  from = "/blog/*"
+  to = "https://chasingcode.dev/blog/*"
+  status = 301
